tools/flowc/tests/errors/error35.flow
import behaviour;

// from https://github.com/area9innovation/material/blob/05e9eefeff00152767272c0b7589e18b0622c6cf/customdb/reports/report_builder_controls.flow#L565-L569
main() {
	newPriority = findmap([0], \n -> Some(n));
	either(newPriority, 0.0);	// newPriority is Maybe<int>, not double
}
